[gd_scene load_steps=8 format=3 uid="uid://b5jhr17guduv3"]

[ext_resource type="Script" path="res://scenes/ui/room_cleared.gd" id="1_46a10"]
[ext_resource type="Texture2D" uid="uid://bi763nih0do2v" path="res://art/Winscreen.png" id="2_seg44"]
[ext_resource type="FontFile" uid="uid://drenqvy884xs8" path="res://FONT/jmh-cthulhumbus-arcade.cthulhumbusarcadeugalt2-regu.ttf" id="3_e5c3l"]
[ext_resource type="Texture2D" uid="uid://btdpeduttgg1d" path="res://art/Menubutton.png" id="4_jd4pi"]

[sub_resource type="LabelSettings" id="LabelSettings_cxryo"]
line_spacing = 6.0
font_size = 12
shadow_size = 4
shadow_color = Color(0.54902, 0.443137, 0.376471, 0.333333)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ew5jt"]
texture = ExtResource("4_jd4pi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wnwd5"]
texture = ExtResource("4_jd4pi")

[node name="RoomCleared" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_46a10")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_seg44")

[node name="Message" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 34.0
offset_top = 70.0
offset_right = 183.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("3_e5c3l")
theme_override_font_sizes/font_size = 25
text = "You've cleared the room!"
label_settings = SubResource("LabelSettings_cxryo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message2" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 34.0
offset_top = 115.0
offset_right = 183.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("3_e5c3l")
theme_override_font_sizes/font_size = 25
text = "Your score:"
label_settings = SubResource("LabelSettings_cxryo")
vertical_alignment = 1

[node name="VboxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 43.0
offset_top = -42.0
offset_right = 167.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="MainMenuButton" type="Button" parent="VboxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 14)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_e5c3l")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxTexture_ew5jt")
text = "Continue"

[node name="MainMenuButton2" type="Button" parent="VboxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_e5c3l")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxTexture_wnwd5")
text = "Main Menu"
expand_icon = true
